# pdf12step

./: .gitignore  .readthedocs.yaml  LICENSE  Pipfile  README.md  example.config.yml  pyproject.toml  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  test.yml  workflow.yaml
docs/: CHANGELOG.md  Makefile  README.md  commands.rst  conf.py  config.md  configvalues.md  custom.md  examples.rst  features.md  formats.md  index.md  install.md  mkconf.py  pdf12step.rst  quickstart.md  requirements.txt  usage.md
docs/_static/: December 2021 Directory.html
docs/_static/css/: style.css
pdf12step/: __main__.py  __version__.py  adict.py  cached.py  cli.py  client.py  config.py  flask_app.py  log.py  main.py  meetings.py  templating.py  utils.py
pdf12step/templates/: columns.html  default.config.yaml  editor.html  layout.html  macros.html  table.html
pdf12step/templates/assets/css/: columns.css  font.css  print.css  style.css  table.css
pdf12step/templates/flask/: base.html  editor.html  pdf.html  preview.html
pdf12step/templates/includes/: info.html
pdf12step/templates/includes/sections/: codes.html  (+12 more)
pdf12step/tests/: base.py  test_cli.py  test_client.py  test_meetings.py  test_templating.py
pdf12step/tests/data/: meetings.json  test.config.yml
pdf12step/tests/templates/: test.txt
sites/baltimoreaa.org/: config.yml  print.config.yaml  print.config.yml  print.css
tests/: base.py  test_cli.py  test_client.py  test_meetings.py  test_templating.py  test_utils.py
tests/data/: example.com-meetings.json  test.config.yml  test.txt
