[tool.poetry]
name = "pdf12step"
version = "1.0.0"
description = "Generates PDFs meeting guides from sites using the 12 Step Meeting List WordPress plugin"
authors = ["Justin Quick <justquick@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
