[tool.poetry]
name = "pdf12step"
version = "1.0.0"
description = "Generates PDFs meeting guides from sites using the 12 Step Meeting List WordPress plugin"
authors = ["Justin Quick <justquick@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37

[testenv]
deps =
    requests==2.26.0
    Flask==2.0.2
    Flask-WeasyPrint==0.6
    weasyprint==53.4
    attrdict==2.0.1
    PyYAML==6.0

    pytest==6.2.5
    pytest-cov==3.0.0
    ipython

commands =
    python -m pytest

[gh-actions]
python =
    3.7: py37
"""
